[package]
name = "sandworm_api_api"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
authors = ["Ifechukwu Daniel <dandynamicx@gmail.com>"]

[dependencies]
rocket = "0.5.1"
sui_ql_core = { git = "https://github.com/sand-worm-labs/sandworm-sui-ql", package = "sui_ql_core" }
eql_core = { git = "https://github.com/sand-worm-labs/sandworm-eql", package = "eql_core" }
sqlparser = "0.41.0"

[dependencies.gluesql]
git = "https://github.com/sand-worm-labs/gluesql"
branch = "main"
default-features = false
features = ["gluesql-mongo-storage", "gluesql-redis-storage"]