[package]
name = "sandworm_api"
version = "0.1.0"
edition = "2021"
authors = ["Ifechukwu Daniel <dandynamicx@gmail.com>"]

[dependencies]
rocket = "0.5.0-rc.1"
sui_ql_core = { git = "https://github.com/sand-worm-labs/sandworm-sui-ql", package = "sui_ql_core" }
eql_core = { git = "https://github.com/sand-worm-labs/sandworm-eql", package = "eql_core" }
sqlparser = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.31"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.21"
rust_decimal = "1.30"  

[dependencies.gluesql]
git = "https://github.com/sand-worm-labs/gluesql"
branch = "main"
default-features = true
