[package]
name = "sandworm_api"
version = "0.1.0"
edition = "2021"
authors = ["Ifechukwu Daniel <dandynamicx@gmail.com>"]

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sui_ql_core = { git = "https://github.com/sand-worm-labs/sandworm-sui-ql", package = "sui_ql_core" }
eql_core = { git = "https://github.com/sand-worm-labs/sandworm-eql", package = "eql_core"  }
sqlparser = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.31"
sqlx = { package = "sqlx-oldapi", version = "0.6.43", default-features = false, features = [
    "any",
    "runtime-tokio-native-tls",
    "migrate",
    "sqlite",
    "postgres",
    "mysql",
    "mssql",
    "chrono",
    "json",
] }
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.21"
rust_decimal = "1.30"
bigdecimal = "0.3" 
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"

[dependencies.gluesql]
git = "https://github.com/sand-worm-labs/gluesql"
branch = "main"
default-features = true

[build-dependencies]
rustls = "0.23"